# PixelForge-

./: .gitignore  PixelForge_实施优先级重排版.md  PixelForge_技术实现路线.md  PixelForge_首期工程骨架设计说明.md  README.md  分阶段任务清单.md  回放实现前置约束与字段缺口.md  当前阶段完成定义.md  当前验证范围与缺口.md  文档索引.md  运行时错误分类与界面映射.md  链路接口与连接细节说明.md  阶段三完成定义.md  阶段二历史态字段投影复查.md  阶段二完成定义.md  阶段二运行时错误分层说明.md  阶段六完成定义.md  阶段四完成定义.md  项目链路总览.md  项目阶段划分.md
PixelForge/: README.md  design-preview.html  index.html  package-lock.json  package.json  tsconfig.json  ui-minimal.html  ui-mockup.html  vite.config.ts
PixelForge/docs/: PatchError_code_调用方误用检查报告.md  freeze-1_一致性矩阵复核稿.md
PixelForge/src/: App.vue  env.d.ts  main.ts  style.css
PixelForge/src-tauri/: Cargo.toml  tauri.conf.json
PixelForge/src-tauri/capabilities/: default.json
PixelForge/src-tauri/src/: lib.rs  main.rs
PixelForge/src/animation/: animation.test.ts  binding.ts  curve.ts  evaluator.ts  keyframe.ts  mapper.ts  player.ts  scheduler.ts  timeline.ts  track.ts  types.ts  uniformUpdater.ts
PixelForge/src/assets/: assetLoader.ts  assetStore.ts  assetToLayer.test.ts  assetToLayer.ts  textureCache.ts  types.ts
PixelForge/src/authoring/: types.ts
PixelForge/src/compiler/: context.ts
PixelForge/src/components/: HelloWorld.vue
PixelForge/src/composables/: commandRegistry.test.ts  commandRegistry.ts  useCommandShortcuts.ts  useKeyboardShortcuts.ts
PixelForge/src/graph/: graph.test.ts  graphAnimation.ts  graphCompiler.ts  graphGenerator.ts  graphHistory.ts  graphStore.ts  layout.ts  nodeRegistry.ts  types.ts  uiStore.ts  validator.ts
(+403 files in other folders)
