[package]
name = "pixelforge"
version = "0.1.0"
description = "PixelForge - WebGPU-powered real-time graphics authoring tool"
authors = ["PixelForge"]
edition = "2021"

[lib]
name = "pixelforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
